--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
-    "@visual-framework/vf-eleventy--extensions": "^1.0.0-alpha.11",
     "gulp": "^4.0.2",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "luxon": "^1.19.3",
+    "touch": "^3.1.0"
   },
   "bugs": {
     "url": "https://github.com/khawkins98/gulp-eleventy/issues"
