--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@11ty/eleventy": "^0.9.0",
     "gulp": "^4.0.2",
     "gulp-watch": "^5.0.1",
+    "through2": "^3.0.1",
     "touch": "^3.1.0"
   },
   "bugs": {
